ui fix: tweak neg margin to kill scrollbar.

--- a/app/assets/stylesheets/titlebar.less
+++ b/app/assets/stylesheets/titlebar.less
@@ -60,7 +60,7 @@
 .app-titlebar-controls {
   display: table;
   table-layout: fixed;
-  margin: 1em -5% 0;
+  margin: 1em -5.5% 0;
   width: 110%;
 }
 
